# TradeButler

./: .gitignore  DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md  README.md  TODO.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: cli.py  main.py
backend/app/api/v1/: ai.py  auth.py  brief.py  companies.py  companies_optimized.py  company_analytics.py  cost_optimization.py  feed.py  market_data.py  popular_news.py  schedule.py  selective_ai.py  user_preferences.py
backend/app/core/: config.py  oauth.py
backend/app/models/: company.py  content.py  cost_log.py  user.py
backend/app/repo/: company.py  content.py  db.py  redis_client.py
backend/app/schemas/: content.py
backend/app/services/: company_analytics.py  company_extractor.py  company_matcher.py  cost_optimizer.py  following_cache.py  market_data.py  popular_news_analyzer.py  selective_ai_pipeline.py  social_metrics_collector.py  user_preferences.py
backend/app/services/ingest/: multi_rss.py  rss.py
backend/app/utils/: cost_calculator.py
backend/app/workers/: beat_config.py  celery_app.py  company_tasks.py  scheduled_tasks.py  tasks.py
backend/tests/: __init__.py  test_content_repo.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: AISettings.tsx  CompanyAnalysis.tsx  CompanyDashboard.tsx  CompanyFollowing.tsx  Dashboard.tsx  GoogleLogin.tsx  MarketIndices.tsx  NewsSummaries.tsx
frontend/src/services/: api.ts
infra/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
