[project]
name = "insighthub-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "feedparser",
    "httpx",
    "beautifulsoup4",
    "readability-lxml",
    "celery[beat]",
    "redis",
    "click",
    "openai",
    "pytest",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
